--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,16 @@
 development:
   adapter: postgresql
-  encoding: unicode
-  database: app_dev
+  database: my_database_development
   pool: 5
-  username: username
-  password: password
-  host: localhost
+  timeout: 5000
+test:
+  adapter: postgresql
+  database: my_database_test
+  pool: 5
+  timeout: 5000
+
+production:
+  adapter: postgresql
+  database: my_database_production
+  pool: 5
+  timeout: 5000
